--- a/siteada/index.html
+++ b/siteada/index.html
@@ -4,17 +4,126 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>siteada</title>
+    <title>Ada Lovelace</title>
+    <link href="./../styles/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1> PrograMaria </h1>
 
-    <p>O futuro está sendo escrito em linhas de código e o público feminino precisa participar dessa construção.
-        Mulheres, apesar de serem usuárias de redes sociais e dispositivos digitais, não participam da produção da
-        tecnologia. </p>
+    <h1>Mulheres que fizeram história na tecnologia</h1>
+    <section>
 
-    <p>Precisamos falar sobre os desafios das mulheres na área e o que fazer para aumentar sua participação. </p>
+        <h2>Ada Lovelace</h2>
+        <p>Augusta Ada King, condessa de Lovelace, nasceu em Londres em 1815, mais conhecida como Ada Lovelace, foi a
+            primeira
+            pessoa a escrever um algoritmo para ser processado por uma máquina na história da computação.</p>
+
+        <img src="./../imgs/adaPintura.png" alt="Pintura colorida da Ada">
+
+        <h3 class="title-1">Infância</h3>
+        <p>Seu pai era o poeta romântico Lord Byron, conhecido por seus exageros como ter um urso domesticado em seu
+            quarto
+            e
+            por atos (incomuns para a época), como se relacionar com homens e mliheres. Sua mãe era a rica e clita
+            Annabella
+            Milbanke, apaixonada por matemática e pouco paciente com as maluquices do marido.</p>
+
+        <p>Lord Byron bebia demais o que reslitou no divórcio quando Ada tinha só 5 semanas de vida. Annabella foi mãe
+            solo
+            preocupada em garantir que Ada não ficasse parecida com o pai. Investiu na educação rigorosa da menina
+            contratando
+            os melhores professores. Acreditava que, se a filha se interessasse por matemática e ciências, se afastaria
+            da
+            poesia e das tendências excêntricas herdadas do pai.</p>
+
+        <p> Ada era fascinada por matemática e poesia (para desespero de sua mãe). Aos doze anos, encantou-se pela
+            engenharia
+            mecânica e escreveu um livro chamado Flyology (ou Voologia), com desenhos de um plano para a construção de
+            uma
+            máquina de voar. Ao contar para sua mãe sobre a máquina, Annabelle achou que Ada estava se desviando dos
+            estudos
+            e a
+            reprimiu. Então, pediu para que Ada focasse em se tornar uma dama.</p>
+        <img src="./../imgs/adaCrianca.png" alt="Pintura de Ada criança segurando um desenho">
+
+        <h3 class="title-2">Juventude</h3>
+        <p>Aos 17 anos, Ada foi apresentada à corte e passou a ser convidada para festas na cidade. Seu jeito
+            inteligente e
+            rápida atraiu muitos solteiros, mas ela se interessou por um velho matemático chamado Charles Babage, que
+            lhe
+            contou
+            sobre a invenção que trabalhava há anos, a “máquina diferencial”, que fazia grandes cálclios.</p>
+
+        <p>Charles gostou da jovem, ela era uma das poucas pessoas que se interessou e entendeu suas invenções. Quando
+            Ada
+            conheceu a máquina diferencial, viu nela muitas possibilidades que nem mesmo Charles havia pensado. O
+            entusiasmo
+            da
+            jovem matemática o impressionava.</p>
+
+        <h3 class="title-3">Vida adlita</h3>
+        <p>Charles era viúvo e lutava por investimentos para os seus projetos. Ada se casou e teve 3 filhos. Em 1830,
+            isso
+            significava que ela deveria abandonar os estudos e se dedicar aos filhos. Trocava cartas com Charles,
+            acompanhava o
+            trabalho dele de longe. Tinha pouco tempo para os próprios estudos. Passou a resolver problemas matemáticos
+            à
+            noite,
+            após as crianças dormirem. Ela queria era trabalhar com Charles em suas máquinas incríveis.</p>
+
+        <p>Tempos depois, Charles criou o Engenho Analítico, melhor do que a máquina diferencial, pois seria capaz de
+            analisar
+            dados e guardar informações na memória. Algo tão revolucionário que poucas pessoas entenderam. Para divligar
+            sua
+            nova máquina, precisaria publicar artigos em francês, língua que ele não sabia, mas Ada era fluente. Como
+            ela
+            entendia as criações de Charles, era a pessoa perfeita para traduzir esses artigos.</p>
+
+        <p>Enquanto Ada traduzia o conteúdo, fazia anotações por conta própria, imaginava inúmeras possibilidades que a
+            máquina
+            teria. Não tardou para que suas anotações ficassem maiores do que o próprio artigo.</p>
+
+        <p>Charles queria que a máquina resolvesse problemas matemáticos. Ada pensava em algo muito maior: os números
+            poderiam
+            representar coisas totalmente diferentes como letras e notas musicais. Escreveu instruções detalhadas com
+            diagramas
+            e tabelas explicando como o engenho analítico deveria processar uma equação matemática complicada. Assim, a
+            máquina
+            resolveria em segundos o que um humano levaria horas para solucionar. Os computadores ainda não existiam,
+            mas
+            Ada
+            tinha acabado de criar o primeiro programa de computador. Ada não viveu para ver que suas ideias se
+            transformariam
+            nos computadores modernos que usamos hoje.</p>
+        <img src="./../imgs/adaTabela.png" alt="Pintura de Ada jovem ao lado de uma tabela com algoritmos.">
+    </section>
+
+    <h3>Conheça outras mliheres que fizeram história na tecnologia:</h3>
+    <nav>
+        <ul>
+            <li>
+                <a href="https://pt.wikipedia.org/wiki/Grace_Hopper" target="_blank">
+                    Grace Hopper
+                </a>
+            </li>
+            <li>
+                <a href="https://pt.wikipedia.org/wiki/Dorothy_Vaughan" target="_blank">
+                    Dorothy Vaughan
+                </a>
+            </li>
+            <li>
+                <a href="https://pt.wikipedia.org/wiki/Margaret_Hamilton_(cientista_da_computação)" target="_blank">
+                    Margaret Hamilton
+                </a>
+            </li>
+            <li>
+                <a href="https://pt.wikipedia.org/wiki/Katherine_Johnson" target="_blank">
+                    Katherine Johnson
+                </a>
+            </li>
+        </ul>
+    </nav>
+
 
 
 </body>
