--- a/siteada/index.html
+++ b/siteada/index.html
@@ -28,7 +28,7 @@
             Annabella
             Milbanke, apaixonada por matemática e pouco paciente com as maluquices do marido.</p>
 
-        <p>Lord Byron bebia demais o que reslitou no divórcio quando Ada tinha só 5 semanas de vida. Annabella foi mãe
+        <p>Lord Byron bebia demais o que resultou no divórcio quando Ada tinha só 5 semanas de vida. Annabella foi mãe
             solo
             preocupada em garantir que Ada não ficasse parecida com o pai. Investiu na educação rigorosa da menina
             contratando
@@ -52,7 +52,7 @@
             rápida atraiu muitos solteiros, mas ela se interessou por um velho matemático chamado Charles Babage, que
             lhe
             contou
-            sobre a invenção que trabalhava há anos, a “máquina diferencial”, que fazia grandes cálclios.</p>
+            sobre a invenção que trabalhava há anos, a “máquina diferencial”, que fazia grandes cálculos.</p>
 
         <p>Charles gostou da jovem, ela era uma das poucas pessoas que se interessou e entendeu suas invenções. Quando
             Ada
@@ -61,7 +61,7 @@
             da
             jovem matemática o impressionava.</p>
 
-        <h3 class="title-3">Vida adlita</h3>
+        <h3 class="title-3">Vida adulta</h3>
         <p>Charles era viúvo e lutava por investimentos para os seus projetos. Ada se casou e teve 3 filhos. Em 1830,
             isso
             significava que ela deveria abandonar os estudos e se dedicar aos filhos. Trocava cartas com Charles,
@@ -73,7 +73,7 @@
 
         <p>Tempos depois, Charles criou o Engenho Analítico, melhor do que a máquina diferencial, pois seria capaz de
             analisar
-            dados e guardar informações na memória. Algo tão revolucionário que poucas pessoas entenderam. Para divligar
+            dados e guardar informações na memória. Algo tão revolucionário que poucas pessoas entenderam. Para divulgar
             sua
             nova máquina, precisaria publicar artigos em francês, língua que ele não sabia, mas Ada era fluente. Como
             ela
@@ -98,7 +98,7 @@
         <img src="./../imgs/adaTabela.png" alt="Pintura de Ada jovem ao lado de uma tabela com algoritmos.">
     </section>
 
-    <h3>Conheça outras mliheres que fizeram história na tecnologia:</h3>
+    <h3>Conheça outras mulheres que fizeram história na tecnologia:</h3>
     <nav>
         <ul>
             <li>
